--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,9 @@ sudo: false
 
 branches:
   only:
-    - develop
     - master
 
-language: cpp
+language: python
 
 matrix:
   include:
@@ -44,8 +43,6 @@ git:
   depth: 1
 
 before_install:
-  # prepare install dir
-  - mkdir ${INSTALL_DIR}
   # install conda
   - |
     MINICONDA_URL="https://repo.continuum.io/miniconda"
@@ -57,36 +54,15 @@ before_install:
   - conda config --set always_yes yes
   # update conda
   - conda update -n base -c conda-forge conda
-  # add extra conda dirs to path so cmake can find packages
-  - export PATH=~/miniconda3/lib:~/miniconda3/include:${PATH}
+  
 
 install:
-  # install ecbuild
-  - git clone --depth 1 https://github.com/ecmwf/ecbuild.git ${ECBUILD_SRC}
-  # install magics-python source
-  - git clone -b develop --depth 1 https://github.com/ecmwf/magics-python.git ${MAGICS_PYTHON_SRC}
-  # install conda deps
-  - conda install boost libnetcdf expat jinja2 xarray scipy cftime
-  - conda install -c conda-forge proj4=5 eccodes pytest cairo pango
-  # search for conda-installed libraries
-  - |
-    if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      export LDFLAGS="$LDFLAGS -L${CONDA_PREFIX}/lib -Wl,-rpath,${CONDA_PREFIX}/lib"
-    fi
+  - conda install -c conda-forge magics
+ 
 
 #---------------------------------#
 #       build configuration       #
 #---------------------------------#
 
 script:
-  # build
-  - mkdir -p ${BUILD_DIR} && cd ${BUILD_DIR}
-  - cmake -D CMAKE_INSTALL_PREFIX=${INSTALL_DIR}
-          -D ENABLE_FORTRAN=0
-          ${MAGICS_SRC}
-  - make -j2
-  - ctest -j2 --output-on-failure
-  - make install > /dev/null
-  # test
-  - cd ${MAGICS_PYTHON_SRC}
   - pytest
