--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ matrix:
       env:
         MINICONDA_FILE="Miniconda3-latest-Linux-x86_64.sh"
 
-
+env:
+  global:
+    - PYTHONPATH=${PYTHONPATH}:.
     
 
 git:
