support for elevation dimension added

--- a/.env
+++ b/.env
@@ -12,5 +12,8 @@ SKINNYWMS_HOST=0.0.0.0
 # the http port the flask server listens on
 SKINNYWMS_PORT=5000
 
+# enable/disable layer dimension grouping (by elevation)
+SKINNYWMS_ENABLE_DIMENSION_GROUPING=1
+
 # flask env to enable auto reload on code changes
 FLASK_ENV=development
