subdirectories of testdata added to dockerignore, github actions fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,8 @@ services:
     restart: always
     ports:
       - 5000:5000
-    # env_file: 
-    #   - ./.env
+    env_file: 
+      - ./.env
     # environment: 
     #   - SKINNYWMS_DATA_PATH=${SKINNYWMS_DATA_PATH}
     #   - SKINNYWMS_HOST=${SKINNYWMS_HOST}
