--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,7 +6,7 @@ name: Publish Docker
 on:
   # Triggers the workflow on push or pull request events but only for the develop branch
   push:
-    branches: [ feature/docker ]
+    branches: [ develop ]
 #   pull_request:
 #     branches: [ develop ]
 
