--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
       context: ./
       dockerfile: Dockerfile
       args:
+        - MAGICS_IMAGE=ecmwf/magics:latest
         - http_proxy
         - https_proxy
         - no_proxy
     volumes:
       - '.:/app/skinnywms'
       - './skinnywms/testdata:/data'
+      # - './skinnywms/testdata/ICON-IMS:/data'
     # override the default command to run flask app without uwgsi
     # to make use of automatic reload on code changes for development purposes
     command: python /app/skinnywms/demo.py --host=${SKINNYWMS_HOST} --port=${SKINNYWMS_PORT} --path=${SKINNYWMS_DATA_PATH}
