switch to ecmwflibs and clean python base image

--- a/.env
+++ b/.env
@@ -17,3 +17,8 @@ SKINNYWMS_ENABLE_DIMENSION_GROUPING=0
 
 # flask env to enable auto reload on code changes
 FLASK_ENV=development
+
+# # Configure Magics
+MAGPLUS_HOME=/usr/local/lib/python3.6/site-packages/ecmwflibs
+# MAGICS_STYLE_PATH=/usr/local/lib/python3.6/site-packages/ecmwflibs/share/magics/styles/
+
