--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,23 @@ services:
       context: ./
       dockerfile: Dockerfile
       args:
-        - MAGICS_IMAGE=ecmwf/magics:latest
+        - PYTHON_IMAGE=python:3.6-slim-buster
         - http_proxy
         - https_proxy
         - no_proxy
     volumes:
-      - '.:/app/skinnywms'
-      - './skinnywms/testdata:/data'
-      # - './skinnywms/testdata/ICON-IMS:/data'
+      - '.:/app/skinnywms:ro'
+      - './skinnywms/testdata:/data:ro'
     # override the default command to run flask app without uwgsi
     # to make use of automatic reload on code changes for development purposes
-    command: python /app/skinnywms/demo.py --host=${SKINNYWMS_HOST} --port=${SKINNYWMS_PORT} --path=${SKINNYWMS_DATA_PATH}
+    command: 
+      - bash 
+      - -c
+      - 'python /app/skinnywms/demo.py --host=${SKINNYWMS_HOST} --port=${SKINNYWMS_PORT} --path=${SKINNYWMS_DATA_PATH}'
     restart: always
     ports:
       - 5000:5000
-    env_file: 
+    env_file:
       - ./.env
     # environment: 
     #   - SKINNYWMS_DATA_PATH=${SKINNYWMS_DATA_PATH}
