python version changed to 3.9, enabled debug logging for magics

--- a/.env
+++ b/.env
@@ -19,6 +19,10 @@ SKINNYWMS_ENABLE_DIMENSION_GROUPING=0
 FLASK_ENV=development
 
 # # Configure Magics
-MAGPLUS_HOME=/usr/local/lib/python3.6/site-packages/ecmwflibs
-# MAGICS_STYLE_PATH=/usr/local/lib/python3.6/site-packages/ecmwflibs/share/magics/styles/
+#MAGPLUS_HOME=/usr/local/lib/python3.6/site-packages/ecmwflibs
+#MAGICS_STYLE_PATH=/usr/local/lib/python3.6/site-packages/ecmwflibs/share/magics/styles/ecmwf
+MAGICS_STYLES_DEBUG=on
 
+MAGPLUS_DEBUG=on
+MAGPLUS_DEV=on
+MAGICS_QUIET=
