--- a/skinnywms/templates/mosmix.template
+++ b/skinnywms/templates/mosmix.template
@@ -1,6 +1,11 @@
 <observations>
-	<obs_template type='hackathon' rows='3' columns='3'>
-     	<obs_station_ring  row='0' column='0'/>   
+	<obs_template type='mosmix' rows='3' columns='3'>
+     	<obs_wind  row='0' column='0'/>   
 		<obs_identification  row='-1' column='-1'/> 
+ 	</obs_template>
+	 <observations>
+	<obs_template type='present_weather' rows='3' columns='3'>
+     	<obs_present_weather  row='0' column='0'/>   
+        <obs_identifier row='1' column='0'/>    
  	</obs_template>
 </observations>
