--- a/skinnywms/templates/obs.template
+++ b/skinnywms/templates/obs.template
@@ -1,9 +1,8 @@
 <observations>
-	<obs_template type='mosmix' rows='3' columns='3'>
+	<obs_template type='station_model' rows='3' columns='3'>
      	<obs_wind  row='0' column='0'/>   
 		<obs_identification  row='-1' column='-1'/> 
  	</obs_template>
-	 <observations>
 	<obs_template type='present_weather' rows='3' columns='3'>
      	<obs_present_weather  row='0' column='0'/>   
         <obs_identifier row='1' column='0'/>    
