support for elevation dimension and dimension grouping for NetCDF

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 # local development server configuration
 #
 
+LOGLEVEL=INFO
+
 # the path inside the docker container that stores the GRIB and NetCDF data
 SKINNYWMS_DATA_PATH=/data/
 
