cors configuration option added, base image updated to python 3.11, GeoJSON fixes

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # local development server configuration
 #
 
-LOGLEVEL=INFO
+LOGLEVEL=WARN # DEBUG, INFO, WARN, ERROR, CRITICAL
 
 # the path inside the docker container that stores the GRIB and NetCDF data
 SKINNYWMS_DATA_PATH=/data/
@@ -15,7 +15,20 @@ SKINNYWMS_HOST=0.0.0.0
 SKINNYWMS_PORT=5000
 
 # enable/disable layer dimension grouping (by elevation)
-SKINNYWMS_ENABLE_DIMENSION_GROUPING=0
+SKINNYWMS_ENABLE_DIMENSION_GROUPING=1
+
+# omit default layers from the WMS capabilities
+# set to 1 to omit default layers, 0 to include them
+SKINNYWMS_OMIT_DEFAULT_LAYERS=0
+
+# enable/disable dark mode
+# set to 1 to enable dark mode, 0 to disable
+SKINNYWMS_DARK_MODE=0
+
+# enable/disable CORS for all endpoints
+# set to "*" to allow all origins, or a comma-separated list of origins
+# e.g. "http://localhost:3000,http://example.com"
+SKINNYWMS_CORS_ORIGINS="*"
 
 # flask env to enable auto reload on code changes
 FLASK_ENV=development
@@ -23,8 +36,8 @@ FLASK_ENV=development
 # # Configure Magics
 #MAGPLUS_HOME=/usr/local/lib/python3.6/site-packages/ecmwflibs
 #MAGICS_STYLE_PATH=/usr/local/lib/python3.6/site-packages/ecmwflibs/share/magics/styles/ecmwf
-MAGICS_STYLES_DEBUG=on
+MAGICS_STYLES_DEBUG= # unset to disable debug logging for styles
 
-MAGPLUS_DEBUG=on
-MAGPLUS_DEV=on
-MAGICS_QUIET=
+MAGPLUS_DEBUG=off
+MAGPLUS_DEV=off
+MAGICS_QUIET=on
